// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์  1. Snapshot Testing - "การจดจำใบหน้ามังกร" AST structure should be consistent and match snapshot: mathematical-expression-ast 1`] = `
[
  {
    "kind": "const",
    "line": 1,
    "name": "x",
    "scope": "global",
    "type": "variable",
  },
]
`;

exports[` GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์  1. Snapshot Testing - "การจดจำใบหน้ามังกร" AST structure should be consistent and match snapshot: mathematical-expression-tokens 1`] = `
[
  {
    "column": 1,
    "length": 5,
    "line": 1,
    "position": 0,
    "type": "KEYWORD",
    "value": "const",
  },
  {
    "column": 7,
    "length": 1,
    "line": 1,
    "position": 6,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 9,
    "length": 1,
    "line": 1,
    "position": 8,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "column": 11,
    "length": 4,
    "line": 1,
    "position": 10,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 15,
    "length": 1,
    "line": 1,
    "position": 14,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 16,
    "length": 3,
    "line": 1,
    "position": 15,
    "type": "IDENTIFIER",
    "value": "pow",
  },
  {
    "column": 19,
    "length": 1,
    "line": 1,
    "position": 18,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 20,
    "length": 1,
    "line": 1,
    "position": 19,
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "column": 22,
    "length": 1,
    "line": 1,
    "position": 21,
    "type": "OPERATOR",
    "value": "+",
  },
  {
    "column": 24,
    "length": 1,
    "line": 1,
    "position": 23,
    "type": "IDENTIFIER",
    "value": "b",
  },
  {
    "column": 25,
    "length": 1,
    "line": 1,
    "position": 24,
    "type": "COMMA",
    "value": ",",
  },
  {
    "column": 27,
    "length": 1,
    "line": 1,
    "position": 26,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "column": 28,
    "length": 1,
    "line": 1,
    "position": 27,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 30,
    "length": 1,
    "line": 1,
    "position": 29,
    "type": "OPERATOR",
    "value": "*",
  },
  {
    "column": 32,
    "length": 1,
    "line": 1,
    "position": 31,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 33,
    "length": 1,
    "line": 1,
    "position": 32,
    "type": "IDENTIFIER",
    "value": "c",
  },
  {
    "column": 35,
    "length": 1,
    "line": 1,
    "position": 34,
    "type": "OPERATOR",
    "value": "-",
  },
  {
    "column": 37,
    "length": 1,
    "line": 1,
    "position": 36,
    "type": "IDENTIFIER",
    "value": "d",
  },
  {
    "column": 38,
    "length": 1,
    "line": 1,
    "position": 37,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 39,
    "line": 1,
    "type": "EOF",
    "value": "",
  },
]
`;

exports[` GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์  1. Snapshot Testing - "การจดจำใบหน้ามังกร" Complex nested function calls should match snapshot: complex-ast-structure 1`] = `[]`;

exports[` GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์  1. Snapshot Testing - "การจดจำใบหน้ามังกร" Complex nested function calls should match snapshot: complex-nested-calls 1`] = `
[
  {
    "column": 1,
    "length": 4,
    "line": 1,
    "position": 0,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 5,
    "length": 1,
    "line": 1,
    "position": 4,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 6,
    "length": 3,
    "line": 1,
    "position": 5,
    "type": "IDENTIFIER",
    "value": "max",
  },
  {
    "column": 9,
    "length": 1,
    "line": 1,
    "position": 8,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 10,
    "length": 4,
    "line": 1,
    "position": 9,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 14,
    "length": 1,
    "line": 1,
    "position": 13,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 15,
    "length": 3,
    "line": 1,
    "position": 14,
    "type": "IDENTIFIER",
    "value": "min",
  },
  {
    "column": 18,
    "length": 1,
    "line": 1,
    "position": 17,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 19,
    "length": 3,
    "line": 1,
    "position": 18,
    "type": "IDENTIFIER",
    "value": "arr",
  },
  {
    "column": 22,
    "length": 1,
    "line": 1,
    "position": 21,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 23,
    "length": 3,
    "line": 1,
    "position": 22,
    "type": "IDENTIFIER",
    "value": "map",
  },
  {
    "column": 26,
    "length": 1,
    "line": 1,
    "position": 25,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 27,
    "length": 1,
    "line": 1,
    "position": 26,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 29,
    "length": 2,
    "line": 1,
    "position": 28,
    "type": "ARROW",
    "value": "=>",
  },
  {
    "column": 32,
    "length": 1,
    "line": 1,
    "position": 31,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 34,
    "length": 1,
    "line": 1,
    "position": 33,
    "type": "OPERATOR",
    "value": "*",
  },
  {
    "column": 36,
    "length": 1,
    "line": 1,
    "position": 35,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "column": 37,
    "length": 1,
    "line": 1,
    "position": 36,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 38,
    "length": 1,
    "line": 1,
    "position": 37,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 39,
    "length": 6,
    "line": 1,
    "position": 38,
    "type": "IDENTIFIER",
    "value": "filter",
  },
  {
    "column": 45,
    "length": 1,
    "line": 1,
    "position": 44,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 46,
    "length": 1,
    "line": 1,
    "position": 45,
    "type": "IDENTIFIER",
    "value": "y",
  },
  {
    "column": 48,
    "length": 2,
    "line": 1,
    "position": 47,
    "type": "ARROW",
    "value": "=>",
  },
  {
    "column": 51,
    "length": 1,
    "line": 1,
    "position": 50,
    "type": "IDENTIFIER",
    "value": "y",
  },
  {
    "column": 53,
    "length": 1,
    "line": 1,
    "position": 52,
    "type": "OPERATOR",
    "value": ">",
  },
  {
    "column": 55,
    "length": 1,
    "line": 1,
    "position": 54,
    "type": "NUMBER",
    "value": "0",
  },
  {
    "column": 56,
    "length": 1,
    "line": 1,
    "position": 55,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 57,
    "length": 1,
    "line": 1,
    "position": 56,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 58,
    "length": 1,
    "line": 1,
    "position": 57,
    "type": "COMMA",
    "value": ",",
  },
  {
    "column": 60,
    "length": 12,
    "line": 1,
    "position": 59,
    "type": "IDENTIFIER",
    "value": "defaultValue",
  },
  {
    "column": 72,
    "length": 1,
    "line": 1,
    "position": 71,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 73,
    "line": 1,
    "type": "EOF",
    "value": "",
  },
]
`;

exports[` GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์  1. Snapshot Testing - "การจดจำใบหน้ามังกร" Security violation patterns should be stable: security-violations 1`] = `
[
  {
    "chahuadevRDetection": true,
    "column": 1,
    "context": "global",
    "line": 1,
    "method": "mock",
    "object": "jest",
    "recommendation": "Mock in production context - move to test files immediately",
    "severity": "CRITICAL",
    "type": "JEST_MOCK",
  },
  {
    "chahuadevRDetection": true,
    "column": 22,
    "context": "global",
    "line": 1,
    "method": "set",
    "object": "cache",
    "recommendation": "Review CACHE_OPERATION usage in global",
    "severity": "MEDIUM",
    "type": "CACHE_OPERATION",
  },
  {
    "chahuadevRDetection": true,
    "column": 39,
    "context": "global",
    "line": 1,
    "method": "mockReturnValue",
    "object": "mockFn",
    "recommendation": "Review MOCK_IMPLEMENTATION usage in global",
    "severity": "HIGH",
    "type": "MOCK_IMPLEMENTATION",
  },
]
`;

exports[`🧙‍♂️ GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์ 📸 1. Snapshot Testing - "การจดจำใบหน้ามังกร" AST structure should be consistent and match snapshot: mathematical-expression-ast 1`] = `[]`;

exports[`🧙‍♂️ GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์ 📸 1. Snapshot Testing - "การจดจำใบหน้ามังกร" AST structure should be consistent and match snapshot: mathematical-expression-tokens 1`] = `
[
  {
    "column": 1,
    "length": 5,
    "line": 1,
    "position": 0,
    "type": "KEYWORD",
    "value": "const",
  },
  {
    "column": 7,
    "length": 1,
    "line": 1,
    "position": 6,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 9,
    "length": 1,
    "line": 1,
    "position": 8,
    "type": "OPERATOR",
    "value": "=",
  },
  {
    "column": 11,
    "length": 4,
    "line": 1,
    "position": 10,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 15,
    "length": 1,
    "line": 1,
    "position": 14,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 16,
    "length": 3,
    "line": 1,
    "position": 15,
    "type": "IDENTIFIER",
    "value": "pow",
  },
  {
    "column": 19,
    "length": 1,
    "line": 1,
    "position": 18,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 20,
    "length": 1,
    "line": 1,
    "position": 19,
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "column": 22,
    "length": 1,
    "line": 1,
    "position": 21,
    "type": "OPERATOR",
    "value": "+",
  },
  {
    "column": 24,
    "length": 1,
    "line": 1,
    "position": 23,
    "type": "IDENTIFIER",
    "value": "b",
  },
  {
    "column": 25,
    "length": 1,
    "line": 1,
    "position": 24,
    "type": "COMMA",
    "value": ",",
  },
  {
    "column": 27,
    "length": 1,
    "line": 1,
    "position": 26,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "column": 28,
    "length": 1,
    "line": 1,
    "position": 27,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 30,
    "length": 1,
    "line": 1,
    "position": 29,
    "type": "OPERATOR",
    "value": "*",
  },
  {
    "column": 32,
    "length": 1,
    "line": 1,
    "position": 31,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 33,
    "length": 1,
    "line": 1,
    "position": 32,
    "type": "IDENTIFIER",
    "value": "c",
  },
  {
    "column": 35,
    "length": 1,
    "line": 1,
    "position": 34,
    "type": "OPERATOR",
    "value": "-",
  },
  {
    "column": 37,
    "length": 1,
    "line": 1,
    "position": 36,
    "type": "IDENTIFIER",
    "value": "d",
  },
  {
    "column": 38,
    "length": 1,
    "line": 1,
    "position": 37,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 39,
    "line": 1,
    "type": "EOF",
    "value": "",
  },
]
`;

exports[`🧙‍♂️ GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์ 📸 1. Snapshot Testing - "การจดจำใบหน้ามังกร" Complex nested function calls should match snapshot: complex-ast-structure 1`] = `[]`;

exports[`🧙‍♂️ GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์ 📸 1. Snapshot Testing - "การจดจำใบหน้ามังกร" Complex nested function calls should match snapshot: complex-nested-calls 1`] = `
[
  {
    "column": 1,
    "length": 4,
    "line": 1,
    "position": 0,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 5,
    "length": 1,
    "line": 1,
    "position": 4,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 6,
    "length": 3,
    "line": 1,
    "position": 5,
    "type": "IDENTIFIER",
    "value": "max",
  },
  {
    "column": 9,
    "length": 1,
    "line": 1,
    "position": 8,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 10,
    "length": 4,
    "line": 1,
    "position": 9,
    "type": "IDENTIFIER",
    "value": "Math",
  },
  {
    "column": 14,
    "length": 1,
    "line": 1,
    "position": 13,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 15,
    "length": 3,
    "line": 1,
    "position": 14,
    "type": "IDENTIFIER",
    "value": "min",
  },
  {
    "column": 18,
    "length": 1,
    "line": 1,
    "position": 17,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 19,
    "length": 3,
    "line": 1,
    "position": 18,
    "type": "IDENTIFIER",
    "value": "arr",
  },
  {
    "column": 22,
    "length": 1,
    "line": 1,
    "position": 21,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 23,
    "length": 3,
    "line": 1,
    "position": 22,
    "type": "IDENTIFIER",
    "value": "map",
  },
  {
    "column": 26,
    "length": 1,
    "line": 1,
    "position": 25,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 27,
    "length": 1,
    "line": 1,
    "position": 26,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 29,
    "length": 2,
    "line": 1,
    "position": 28,
    "type": "ARROW",
    "value": "=>",
  },
  {
    "column": 32,
    "length": 1,
    "line": 1,
    "position": 31,
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "column": 34,
    "length": 1,
    "line": 1,
    "position": 33,
    "type": "OPERATOR",
    "value": "*",
  },
  {
    "column": 36,
    "length": 1,
    "line": 1,
    "position": 35,
    "type": "NUMBER",
    "value": "2",
  },
  {
    "column": 37,
    "length": 1,
    "line": 1,
    "position": 36,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 38,
    "length": 1,
    "line": 1,
    "position": 37,
    "type": "OPERATOR",
    "value": ".",
  },
  {
    "column": 39,
    "length": 6,
    "line": 1,
    "position": 38,
    "type": "IDENTIFIER",
    "value": "filter",
  },
  {
    "column": 45,
    "length": 1,
    "line": 1,
    "position": 44,
    "type": "PAREN_OPEN",
    "value": "(",
  },
  {
    "column": 46,
    "length": 1,
    "line": 1,
    "position": 45,
    "type": "IDENTIFIER",
    "value": "y",
  },
  {
    "column": 48,
    "length": 2,
    "line": 1,
    "position": 47,
    "type": "ARROW",
    "value": "=>",
  },
  {
    "column": 51,
    "length": 1,
    "line": 1,
    "position": 50,
    "type": "IDENTIFIER",
    "value": "y",
  },
  {
    "column": 53,
    "length": 1,
    "line": 1,
    "position": 52,
    "type": "OPERATOR",
    "value": ">",
  },
  {
    "column": 55,
    "length": 1,
    "line": 1,
    "position": 54,
    "type": "NUMBER",
    "value": "0",
  },
  {
    "column": 56,
    "length": 1,
    "line": 1,
    "position": 55,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 57,
    "length": 1,
    "line": 1,
    "position": 56,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 58,
    "length": 1,
    "line": 1,
    "position": 57,
    "type": "COMMA",
    "value": ",",
  },
  {
    "column": 60,
    "length": 12,
    "line": 1,
    "position": 59,
    "type": "IDENTIFIER",
    "value": "defaultValue",
  },
  {
    "column": 72,
    "length": 1,
    "line": 1,
    "position": 71,
    "type": "PAREN_CLOSE",
    "value": ")",
  },
  {
    "column": 73,
    "line": 1,
    "type": "EOF",
    "value": "",
  },
]
`;

exports[`🧙‍♂️ GRANDMASTER LEVEL TESTING - สมรภูมิปรมาจารย์ 📸 1. Snapshot Testing - "การจดจำใบหน้ามังกร" Security violation patterns should be stable: security-violations 1`] = `
[
  {
    "chahuadevRDetection": true,
    "column": 1,
    "context": "global",
    "line": 1,
    "method": "mock",
    "object": "jest",
    "recommendation": "Mock in production context - move to test files immediately",
    "severity": "CRITICAL",
    "type": "JEST_MOCK",
  },
  {
    "chahuadevRDetection": true,
    "column": 22,
    "context": "global",
    "line": 1,
    "method": "set",
    "object": "cache",
    "recommendation": "Review CACHE_OPERATION usage in global",
    "severity": "MEDIUM",
    "type": "CACHE_OPERATION",
  },
  {
    "chahuadevRDetection": true,
    "column": 39,
    "context": "global",
    "line": 1,
    "method": "mockReturnValue",
    "object": "mockFn",
    "recommendation": "Review MOCK_IMPLEMENTATION usage in global",
    "severity": "HIGH",
    "type": "MOCK_IMPLEMENTATION",
  },
]
`;
